[package]
name = "freenights"
version = "0.1.0"
authors = ["Mateusz Cegiełka <mateusz@cegla.net>"]
edition = "2018"

[dependencies]
amethyst = { version = "0.13", features = ["vulkan"] }
rand = "0.7"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
